Created new POST /user endpoint that adds new user to users table.
